<resources>
    <string name="app_name">Aight</string>
    <string name="title_activity_maps">Aight</string>
    <string name="plus_button">+</string>
    <string name="title_activity_create_event">CreateEvent</string>

    <string name="description">Describe your activity</string>
    <string name="description_hint">What will you be doing?</string>
    <string name="duration">Set the duration</string>
    <string name="action_settings">Settings</string>
    <string name="aight">AIGHT</string>
    <string name="title_activity_welcome">Welcome</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">Log in</string>
    <string name="title_activity_signup">Sign up</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Password Again</string>
    <string name="error_intro">"Please "</string>
    <string name="error_blank_username">enter a username</string>
    <string name="error_blank_password">enter a password</string>
    <string name="error_mismatched_passwords">enter the same password twice</string>
    <string name="error_join">", and "</string>
    <string name="error_end">.</string>
    <string name="progress_login">Logging you in&#8230;</string>
    <string name="progress_signup">Signing you up&#8230;</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="title_activity_log_in">Log In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    <string name="log_out">Logout</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="timeleft">| %s left</string>

    <plurals name="minute_plural">
        <item quantity="one">&#60; 1 minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>



</resources>
