<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="nl.mprog.rutger.aight.SignUp"
    android:orientation="vertical"
    android:background="@color/ColorPrimary">

    <EditText
        android:layout_marginTop="128sp"
        android:id="@+id/username_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_username"
        android:textColorHint="@color/washed_orange"
        android:textColor="@color/White"
        android:inputType="textCapSentences"
        android:maxLines="1"
        android:singleLine="true"
        android:backgroundTint="@color/blue"/>

    <EditText
        android:layout_marginTop="48sp"
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        android:textColorHint="@color/washed_orange"
        android:textColor="@color/White"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:backgroundTint="@color/blue"/>

    <EditText
        android:layout_marginTop="48sp"
        android:id="@+id/password_again_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password_again"
        android:textColorHint="@color/washed_orange"
        android:textColor="@color/White"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:imeActionId="@+id/edittext_action_signup"
        android:imeActionLabel="@string/sign_up"
        android:imeOptions="actionUnspecified"
        android:backgroundTint="@color/blue"
        android:backgroundTintMode="src_atop" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="256sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64sp"
        android:text="@string/sign_up"
        android:layout_gravity="center_vertical|center_horizontal"
        android:background="@color/blue"
        android:textSize="32sp"
        android:textColor="@color/White"
        android:padding="16sp" />

</LinearLayout>
