<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="nl.mprog.rutger.aight.WelcomeActivity"
    android:background="@color/ColorPrimary"
    android:weightSum="1">

    <TextView android:text="@string/aight" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:textColor="@color/White"
        android:textSize="80sp" android:layout_marginTop="63sp"
        android:layout_gravity="center" android:layout_marginBottom="128sp"/>

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="256sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32sp"
        android:text="@string/log_in"
        android:layout_gravity="center_vertical|center_horizontal"
        android:background="@color/Green"
        android:textSize="32sp"
        android:textColor="@color/White"
        android:padding="16sp"
        android:onClick="goLogIn"/>

    <Button
        android:id="@+id/signupbutton"
        android:layout_width="256sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32sp"
        android:text="@string/sign_up"
        android:layout_gravity="center_vertical|center_horizontal"
        android:background="@color/blue"
        android:textSize="32sp"
        android:textColor="@color/White"
        android:padding="16sp"
        android:onClick="goSignUp"/>
</LinearLayout>
