<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="nl.mprog.rutger.aight.CreateEvent"
    android:background="@color/ColorPrimary"
    android:weightSum="1">

    <TextView android:text="@string/description" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:textColor="@color/White"
        android:textSize="32sp" android:layout_marginTop="63sp"/>

    <TextView
        android:id="@+id/charCount"
        android:layout_gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp" android:textColor="@color/washed_orange"/>

    <EditText
        android:inputType="textCapSentences"
        android:textColor="@color/White"
        android:id="@+id/event_description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description_hint"
        android:textColorHint="@color/washed_orange"
        android:maxLength="40"
        android:backgroundTint="@color/washed_orange" />


    <TextView android:text="@string/duration" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_marginTop="64sp"
        android:textSize="32sp" android:textColor="@color/White"/>

    <TextView
        android:id="@+id/chosentime"
        android:layout_gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp" android:textColor="@color/White"/>
    <SeekBar
        android:id="@+id/timeslider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26sp"
        android:progressTint="@color/washed_orange"
        android:progress="6"
        android:max="18"
        android:backgroundTint="@color/Green"
        android:backgroundTintMode="src_over"
        android:progressTintMode="src_over"
        android:progressBackgroundTint="@color/ColorPrimaryDark" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32sp"
        android:text="@string/aight"
        android:layout_gravity="bottom|end"
        android:layout_marginRight="16sp"
        android:layout_marginEnd="16sp"
        android:layout_marginBottom="16sp"
        android:background="@color/blue"
        android:id="@+id/aightbutton"
        android:textSize="32sp"
        android:textColor="@color/White"
        android:padding="16sp"
        android:onClick="sendEventToParse"/>
</LinearLayout>
