<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="nl.mprog.rutger.aight.LogIn"
    android:background="@color/ColorPrimary"
    android:orientation="vertical">


    <EditText
        android:layout_marginTop="128sp"
        android:layout_gravity="center_vertical"
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:textColorHint="@color/washed_orange"
        android:textColor="@color/White"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true"
        android:backgroundTint="@color/Green"/>

    <EditText
        android:layout_marginTop="48sp"
        android:layout_gravity="center_vertical"
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColorHint="@color/washed_orange"
        android:textColor="@color/White"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:imeActionId="@+id/edittext_action_login"
        android:imeActionLabel="@string/log_in"
        android:imeOptions="actionUnspecified"
        android:backgroundTint="@color/Green" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="256sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64sp"
        android:text="@string/log_in"
        android:layout_gravity="center_vertical|center_horizontal"
        android:background="@color/Green"
        android:textSize="32sp"
        android:textColor="@color/White"
        android:padding="16sp"/>

</LinearLayout>
